inlui estrutura html e iniciei css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Twitter</title>
+    <link rel="stylesheet" href="css/main.css">
+</head>
+
+<body>
+    <header>
+        <h1>Twitter</h1>
+    </header>
+    <main>
+        <div id="info">
+            <section>
+                <h2>Name</h2>
+                <h3>Bio</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore magna aliqua.</p>
+            </section>
+            <section>
+                <textarea id="tweet" placeholder="O que está acontecendo?"></textarea>
+                <hr>
+                <button>Tweet</button>
+            </section>
+        </div>
+        <section id="Tweets">
+        </section>
+    </main>
+    <script src="twitter.js"></script>
+</body>
+
+</html>
