ajustei HTML e CSS

--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
                 <h2>Name</h2>
                 <h3>Bio</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore magna aliqua.</p>
+                    et dolore magna aliqua.</p>
             </section>
-            <section>
-                <textarea id="tweet" placeholder="O que está acontecendo?"></textarea>
-                <hr>
-                <button>Tweet</button>
+            <section id="tweet">
+                <textarea id="tweet-area" placeholder="O que está acontecendo?"></textarea>
+                <button>TWEET</button>
             </section>
         </div>
-        <section id="Tweets">
+        <section id="tweets">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dol.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dol.</p>
         </section>
     </main>
     <script src="twitter.js"></script>
