1a versao ok - adicionando tweet

--- a/index.html
+++ b/index.html
@@ -23,12 +23,11 @@
             </section>
             <section id="tweet">
                 <textarea id="tweet-area" placeholder="O que está acontecendo?"></textarea>
-                <button>TWEET</button>
+                <button id='tweet-button'>TWEET</button>
             </section>
         </div>
         <section id="tweets">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dol.</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dol.</p>
+            
         </section>
     </main>
     <script src="twitter.js"></script>
