--- a/index.html
+++ b/index.html
@@ -23,11 +23,14 @@
             </section>
             <section id="tweet">
                 <textarea id="tweet-area" placeholder="O que está acontecendo?"></textarea>
-                <button id='tweet-button'>TWEET</button>
+                <div>
+                    <input id='tweet-button' type="button" value="TWEET"></input>
+                    <p id='counter'>140</p>
+                </div>
             </section>
         </div>
         <section id="tweets">
-            
+
         </section>
     </main>
     <script src="twitter.js"></script>
