4a e 5a versao ok - aumentando textarea com enter ou muitos caracteres

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
                     et dolore magna aliqua.</p>
             </section>
             <section id="tweet">
-                <textarea id="tweet-area" placeholder="O que está acontecendo?"></textarea>
+                <textarea id="tweet-area" rows="1" cols="65" placeholder="O que está acontecendo?"></textarea>
+                <hr>
                 <div>
                     <input id='tweet-button' type="button" value="TWEET"></input>
                     <p id='counter'>140</p>
