--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </section>
     </main>
     <script src="twitter.js"></script>
+    <script src="https://unpkg.com/moment"></script>
 </body>
 
 </html>
