ajustei botão e contador - estava com problema para resetar depois do primeiro tweet

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <textarea id="tweet-area" rows="1" cols="65" placeholder="O que está acontecendo?"></textarea>
                 <hr>
                 <div>
-                    <input id='tweet-button' type="button" value="TWEET"></input>
+                    <button id='tweet-button'>TWEET</button>
                     <p id='counter'>140</p>
                 </div>
             </section>
